# nuc_pkg

CKubot/: CMakeLists.txt  package.xml
CKubot/include/: CKubot.h
CKubot/src/: CKubot.cpp
e2box_imu_9dofv4-master/: CMakeLists.txt
e2box_imu_9dofv4-master/include/: e2box_imu_9dofv4.h  main.h
e2box_imu_9dofv4-master/src/: e2box_imu_9dofv4.cpp  main.cpp
kubot/include/kubot/: kubot.h
kubot/src/: main (copy).cpp  main.cpp  main_recent.cpp  test_save.cpp
